# RIA

./: .gitattributes  .gitignore  agents.md  pyproject.toml
config/: stt.yaml  tts.yaml
ria/: find_audio.py  llm.py  main.py  stt.py  tts.py
ria/llm/: llm.py  prompt.json  prompt.py
ria/stt/: audio.py  kws.py  kws_advanced.py  stt.py
ria/test/: audio_test.py  find_audio.py  kws_test.py  stt_test.py
ria/train/: .gitignore  convert_raw_to_datasets.sh  extract_kws_segments_ui.py  kws_config.yaml  kws_train.py
ria/tts/: supertonic_onnx.py  tts.py
